--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.kafka:spring-kafka-test'
+    implementation 'org.apache.kafka:kafka-clients'
+    implementation 'org.slf4j:slf4j-simple'
 }
 
 tasks.named('test') {
